--- a/login.html
+++ b/login.html
@@ -86,11 +86,11 @@
           <h1 class="h3 mb-3 fw-normal">Iniciar Sesión</h1>
       
           <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="correo" placeholder="name@example">
+            <input type="text" class="form-control" id="correo" placeholder="H@TEST">
             <label for="correo">Correo electrónico</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="contraseña" placeholder="Password">
+            <input type="password" class="form-control" id="contraseña" placeholder="H123">
             <label for="contraseña">Contraseña</label>
           </div>
           <div id="error" style="color: red; text-align: center;"></div>
