--- a/Dashboard.html
+++ b/Dashboard.html
@@ -104,7 +104,7 @@
     <div class="container-fluid">
         <header class="bg-light py-2">
             <div class="d-flex justify-content-between align-items-center">
-                <h2 class="text-dark">RentaCar ML</h2>
+                <h2 class="text-dark">Rent Car ML</h2>
                 <button class="btn btn-danger" onclick="window.location.href='login.html'">Cerrar sesión</button>
             </div>
         </header>
